feat: migrate QuickCached-Server to jdk11